added banner section and make responsive for mobile

--- a/Style/style.css
+++ b/Style/style.css
@@ -10,6 +10,8 @@
 
 .body {
     background-color: #F7F7F7;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 
@@ -18,7 +20,16 @@
     display: flex;
 }
 
-.btn-primary {}
+.btn-primary {
+    height: 50px;
+    width: 12.31rem;
+    border: none;
+    border-radius: 18px;
+    background-color: black;
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
 
 /* navbar style */
 
@@ -45,6 +56,7 @@
 .nav-links {
     gap: 32px;
     align-items: center;
+    margin-right: 200px;
 }
 
 .nav-link {
@@ -80,13 +92,30 @@
     font-weight: 500;
 }
 
+/* banner style */
+.banner-container{
+    /* gap: 80px; */
+    align-items: center;
+    justify-content: space-around;
+}
 
+.banner-title{
+    font-size: 4.2rem;
+    font-weight: 700;
+}
+.banner-description{
+    font-size: 1.55rem;
+    margin: 24px 0;
+}
 
 /* responsive section */
 
 @media screen and (max-width: 576px) {
     .nav-links {
         display: none;
+    }
+    main{
+        margin: 10px 12px;
     }
     .navbar{
         justify-content: space-between;
@@ -114,4 +143,30 @@
         margin: 6px 0;
     }
 
+    /* banner section */
+    .banner-container{
+        flex-direction: column-reverse;
+    }
+    .banner-container img{
+        width: 90%;
+        margin: 20px 0px;
+    }
+    .banner-title{
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 2.5rem;
+        padding: 0px 8px;
+    }
+
+    .banner-description{
+        text-align: center;
+        font-size: 1rem;
+    }
+    br{
+        display: none;
+    }
+
+    #btn1{
+        margin:5px 100px;
+    }
 }
