--- a/Style/style.css
+++ b/Style/style.css
@@ -10,8 +10,8 @@
 
 .body {
     background-color: #F7F7F7;
-    max-width: 1440px;
-    margin: 0 auto;
+    max-width: 1920px;
+    margin: 0px auto;
 }
 
 
@@ -31,11 +31,28 @@
     font-weight: 500;
 }
 
+#orange {
+    color: #FEA301;
+}
+
+#blue {
+    color: #01ACFD;
+}
+
+#green {
+    color: #05D4DF;
+}
+
+#purple {
+    color: #5D58EF;
+}
+
 /* navbar style */
 
 .navbar {
     justify-content: space-around;
-    margin-top: 37px;
+    max-width: 1440px;
+    margin: 37px auto;
 }
 
 .scl-name {
@@ -65,22 +82,6 @@
     font-weight: 700;
 }
 
-#orange {
-    color: #FEA301;
-}
-
-#blue {
-    color: #01ACFD;
-}
-
-#green {
-    color: #05D4DF;
-}
-
-#purple {
-    color: #5D58EF;
-}
-
 .contact {
     height: 50px;
     width: 12.31rem;
@@ -93,19 +94,110 @@
 }
 
 /* banner style */
-.banner-container{
+.banner-container {
     /* gap: 80px; */
     align-items: center;
     justify-content: space-around;
+    max-width: 1440px;
+    margin: 37px auto;
 }
 
-.banner-title{
+.banner-title {
     font-size: 4.2rem;
     font-weight: 700;
 }
-.banner-description{
+
+.banner-description {
     font-size: 1.55rem;
     margin: 24px 0;
+}
+
+/* curriculum section style */
+.curriculum {
+    background-image: url(/assets/bg.png);
+    background-repeat: repeat;
+    max-width: 1920px;
+}
+
+.curriculum-container {
+    justify-content: space-around;
+    max-width: 1440px;
+    margin: 0px auto;
+}
+
+.curriculum-title {
+    text-align: center;
+    font-size: 3.8rem;
+    font-weight: 700;
+    padding-top: 60px;
+    margin-bottom: 80px;
+}
+
+.curriculum-card-1 {
+    text-align: center;
+    height: 481px;
+    width: 368px;
+    padding: 60px 40px 0px;
+    border: 0.94px solid rgb(222, 245, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(222, 245, 255), rgba(255, 255, 255, 0) 40%),
+        rgb(255, 255, 255);
+}
+
+.curriculum-card-2 {
+    text-align: center;
+    height: 481px;
+    width: 368px;
+    padding: 60px 40px 0px;
+    border: 0.94px solid rgb(255, 244, 220);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(255, 244, 220), rgba(255, 255, 255, 0) 40%),
+        rgb(255, 255, 255);
+}
+
+.curriculum-card-3 {
+    text-align: center;
+    height: 476px;
+    width: 368px;
+    padding: 60px 40px 0px;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255), rgba(255, 255, 255, 0) 40%),
+        rgb(255, 255, 255);
+}
+
+.read-more {
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.card-title {
+    font-size: 1.9rem;
+    font-weight: 700;
+    margin: 34px 0 38px;
+}
+
+.card-description {
+    font-size: 1.3rem;
+    margin-bottom: 50px;
+    color: rgb(128, 128, 128);
+    font-family: Raleway;
+    font-weight: 500;
+    line-height: 28.3px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.arrow-icon{
+    text-align: center;
+    margin-top: 80px;
+}
+.arrow-icon img{
+    margin-left: 5px;
 }
 
 /* responsive section */
@@ -114,15 +206,18 @@
     .nav-links {
         display: none;
     }
-    main{
-        margin: 10px 12px;
+
+    main {
+        margin: 10px 20px;
     }
-    .navbar{
+
+    .navbar {
         justify-content: space-between;
         align-items: center;
         margin: 12px 16px;
     }
-    .hr-line{
+
+    .hr-line {
         border-bottom: 1px solid #FEA301;
         border-width: 100%;
     }
@@ -135,7 +230,7 @@
         display: none;
     }
 
-    .menu{
+    .menu {
         width: 35px;
         height: 3px;
         border-radius: 4px;
@@ -144,29 +239,89 @@
     }
 
     /* banner section */
-    .banner-container{
+    .banner-container {
         flex-direction: column-reverse;
     }
-    .banner-container img{
-        width: 90%;
+
+    .banner-container img {
+        width: 95%;
         margin: 20px 0px;
     }
-    .banner-title{
+
+    .banner-title {
         text-align: center;
         margin-bottom: 10px;
         font-size: 2.5rem;
         padding: 0px 8px;
     }
 
-    .banner-description{
+    .banner-description {
         text-align: center;
         font-size: 1rem;
+        width: 90%;
+        margin: 20px auto;
     }
-    br{
+
+    br {
         display: none;
     }
 
-    #btn1{
-        margin:5px 100px;
+    #btn1 {
+        margin: 5px 120px;
     }
+
+    /* curriculum section */
+
+    .curriculum-container{
+        flex-direction: column;
+    }
+
+    .curriculum-title{
+        font-size: 1.9rem;
+        width: 92%;
+        margin: 15px auto;
+    }
+    .curriculum-card-1{
+        width: 78%;
+        height: 70%;
+        margin-bottom: 12px;
+        padding: 40px 40px;
+    }
+
+    .curriculum-card-2{
+        width: 78%;
+        height: 70%;
+        margin-bottom: 12px;
+        padding: 40px 40px;
+    }
+
+    .curriculum-card-3{
+        width: 78%;
+        height: 70%;
+        padding: 40px 40px;
+    }
+    .card-title {
+    font-size: 1.5rem;
+    margin: 22px 0 26px;
+}
+
+.card-description {
+    font-size: 1rem;
+    margin-bottom: 30px;
+    color: rgb(128, 128, 128);
+    font-family: Raleway;
+    font-weight: 500;
+    line-height: 28.3px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.read-more {
+    font-size: 0.9rem;
+    margin-bottom: 20px;
+}
+.arrow-icon{
+    display: none;
+}
+
 }
