--- a/Style/style.css
+++ b/Style/style.css
@@ -214,7 +214,7 @@
 
 .story-title {
     text-align: center;
-    font-size: 2.8rem;
+    font-size: 3rem;
     font-weight: 700;
     margin: 80px 0px;
 }
@@ -241,13 +241,13 @@
 }
 
 .story-card-title {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 700;
-    margin-bottom: 47px;
+    margin-bottom: 45px;
 }
 
 .story-card-description {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
     color: rgb(128, 128, 128);
     font-family: Raleway;
     font-weight: 500;
@@ -267,7 +267,7 @@
     font-weight: 500;
     text-align: center;
     position: relative;
-    bottom: 305px;
+    bottom: 335px;
     left: 35px;
 }
 
@@ -328,7 +328,65 @@
 }
 
 #story-btn {
-    margin-top: 80px;
+    margin: 80px 0px;
+}
+
+/* footer */
+
+footer{
+    height: 590px;
+    width: 1920px;
+    background-color: #01ACFD;
+}
+
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-around;
+    padding: 123px 228px 150px 350px;
+}
+.school-logo{
+    align-items: center;
+}
+.school-logo > h3{
+    color: white;
+    font-size: 2.3rem;
+    font-weight: 700;
+    margin-left: 8px;
+}
+
+.first-column > p{
+    color: white;
+    font-size: 1.2rem;
+}
+.secont-column{
+    margin-left: 120px;
+}
+
+.secont-column > h5{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.secont-column-links > a{
+    text-decoration: none;
+    color: white;
+}
+.secont-column-links{
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 25px;
+}
+.third-column{
+    margin-left: 90px;
+}
+.third-column > h3{
+    color: white;
+    font-size: 1.6rem;
+    margin-bottom: 20px;
+}
+.third-column > img{
+    margin-right: 8px;
 }
 
 /* responsive section */
@@ -375,22 +433,22 @@
     }
 
     .banner-container img {
-        width: 95%;
+        width: 90%;
         margin: 20px 0px;
     }
 
     .banner-title {
         text-align: center;
         margin-bottom: 10px;
-        font-size: 2.5rem;
-        padding: 0px 8px;
+        font-size: 2.42rem;
+        padding: 0px 50px;
     }
 
     .banner-description {
         text-align: center;
-        font-size: 1rem;
-        width: 90%;
-        margin: 20px auto;
+        font-size: 0.9rem;
+        margin: 25px auto;
+        padding: 0px 45px;
     }
 
     br {
@@ -398,7 +456,7 @@
     }
 
     #btn1 {
-        margin: 5px 120px;
+        margin: 5px 150px;
     }
 
     /* curriculum section */
@@ -418,6 +476,7 @@
         height: 70%;
         margin-bottom: 12px;
         padding: 40px 40px;
+        margin-left: 10px;
     }
 
     .curriculum-card-2 {
@@ -425,12 +484,14 @@
         height: 70%;
         margin-bottom: 12px;
         padding: 40px 40px;
+        margin-left: 10px;
     }
 
     .curriculum-card-3 {
         width: 78%;
         height: 70%;
         padding: 40px 40px;
+        margin-left: 10px;
     }
 
     .card-title {
@@ -459,6 +520,9 @@
     }
 
     /* story section */
+    .story-title{
+        font-size: 2rem;
+    }
     .big-card {
         display: none;
     }
@@ -504,5 +568,37 @@
     }
     #story-btn {
         margin-top: 20px;
+    }
+
+    /* footer */
+
+    footer{
+        width: 100%;
+    }
+
+    .footer-container{
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0px;
+        margin-left: 24px;
+    }
+    .first-column{
+        margin-top: 40px;
+    }
+    .school-logo > h3{
+        color: white;
+        font-size: 1.9rem;
+        padding-right: 200px;
+    }
+    .first-column > p{
+        font-size: 0.9rem;
+        padding-right: 100px;
+        margin-top: 20px;
+    }
+
+    .secont-column{
+        margin: 25px 0px;
+    }
+    .third-column{
+        margin: 10px 0px;
     }
 }
