--- a/Style/style.css
+++ b/Style/style.css
@@ -13,7 +13,35 @@
     max-width: 1920px;
     margin: 0px auto;
 }
+marquee{
+    font-size: 15px;
+}
+.marq{
+    align-items: center;
+}
+.marq > h5{
+    margin-left: 290px;
+    font-size: 1rem;
+    background-color: #5D58F0;
+    color: white;
+    padding: 7px 12px;
+}
+.marq > a{
+    text-decoration: none;
+    color: black;
+}
 
+marquee{
+    height: 20px;
+    width: 1280px;
+   margin-left: 7px;
+    /* background-color: #FEA301; */
+}
+.marq-text{
+    font-size: 18px;
+    color: #5D58F0;
+    font-weight: 600;
+}
 
 /* shared style */
 .display-flex {
@@ -29,6 +57,10 @@
     color: white;
     font-size: 1.25rem;
     font-weight: 500;
+}
+.btn-primary:hover{
+    background-color: #FEA301;
+    cursor: pointer;
 }
 
 #orange {
@@ -91,6 +123,11 @@
     color: white;
     font-size: 1.25rem;
     font-weight: 500;
+}
+
+.contact:hover{
+    background-color: #05D4DF;
+    cursor: pointer;
 }
 
 /* banner style */
@@ -398,6 +435,12 @@ footer{
 
     main {
         /* margin: 10px 20px; */
+    }
+    .marq{
+        width: 100%;
+    }
+    .marq > h5{
+        margin: 5px 0px;
     }
 
     .navbar {
