--- a/Style/style.css
+++ b/Style/style.css
@@ -13,31 +13,36 @@
     max-width: 1920px;
     margin: 0px auto;
 }
-marquee{
+
+marquee {
     font-size: 15px;
 }
-.marq{
+
+.marq {
     align-items: center;
 }
-.marq > h5{
+
+.marq>h5 {
     margin-left: 290px;
     font-size: 1rem;
     background-color: #5D58F0;
     color: white;
     padding: 7px 12px;
 }
-.marq > a{
+
+.marq>a {
     text-decoration: none;
     color: black;
 }
 
-marquee{
+marquee {
     height: 20px;
     width: 1280px;
-   margin-left: 7px;
+    margin-left: 7px;
     /* background-color: #FEA301; */
 }
-.marq-text{
+
+.marq-text {
     font-size: 18px;
     color: #5D58F0;
     font-weight: 600;
@@ -58,7 +63,8 @@ marquee{
     font-size: 1.25rem;
     font-weight: 500;
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
     background-color: #FEA301;
     cursor: pointer;
 }
@@ -125,7 +131,7 @@ marquee{
     font-weight: 500;
 }
 
-.contact:hover{
+.contact:hover {
     background-color: #05D4DF;
     cursor: pointer;
 }
@@ -154,6 +160,7 @@ marquee{
     background-image: url(../assets/bg.png);
     background-repeat: repeat;
     max-width: 1920px;
+    margin: 0px auto;
 }
 
 .curriculum-container {
@@ -247,6 +254,7 @@ marquee{
     background: url(../assets/bg.png), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),
             rgba(255, 255, 255, 0.3) 100%);
     background-repeat: repeat;
+    margin: 0px auto;
 }
 
 .story-title {
@@ -370,59 +378,67 @@ marquee{
 
 /* footer */
 
-footer{
+footer {
     height: 590px;
-    width: 1920px;
+    width: 1897px;
     background-color: #01ACFD;
 }
 
-.footer-container{
+.footer-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-around;
     padding: 123px 228px 150px 350px;
 }
-.school-logo{
+
+.school-logo {
     align-items: center;
 }
-.school-logo > h3{
+
+.school-logo>h3 {
     color: white;
     font-size: 2.3rem;
     font-weight: 700;
     margin-left: 8px;
 }
 
-.first-column > p{
+.first-column>p {
     color: white;
     font-size: 1.2rem;
 }
-.secont-column{
+
+.secont-column {
     margin-left: 120px;
 }
 
-.secont-column > h5{
+.secont-column>h5 {
     color: white;
     font-size: 1.5rem;
     font-weight: 500;
 }
-.secont-column-links > a{
+
+.secont-column-links>a {
     text-decoration: none;
     color: white;
 }
-.secont-column-links{
+
+.secont-column-links {
     flex-direction: column;
     gap: 20px;
     margin-top: 25px;
 }
-.third-column{
+
+.third-column {
     margin-left: 90px;
 }
-.third-column > h3{
+
+.third-column>h3 {
     color: white;
     font-size: 1.6rem;
     margin-bottom: 20px;
 }
-.third-column > img{
+
+.third-column>img {
     margin-right: 8px;
 }
 
@@ -436,10 +452,12 @@ footer{
     main {
         /* margin: 10px 20px; */
     }
-    .marq{
+
+    .marq {
         width: 100%;
     }
-    .marq > h5{
+
+    .marq>h5 {
         margin: 5px 0px;
     }
 
@@ -563,17 +581,20 @@ footer{
     }
 
     /* story section */
-    .story-title{
+    .story-title {
         font-size: 2rem;
     }
+
     .big-card {
         display: none;
     }
-    .small-cards{
+
+    .small-cards {
         gap: 0px;
         justify-content: center;
         margin-left: 10px;
     }
+
     .small-card {
         width: 95%;
         height: 95%;
@@ -609,39 +630,44 @@ footer{
         bottom: 105px;
         left: 30px;
     }
+
     #story-btn {
         margin-top: 20px;
     }
 
     /* footer */
 
-    footer{
+    footer {
         width: 100%;
     }
 
-    .footer-container{
+    .footer-container {
         grid-template-columns: repeat(1, 1fr);
         padding: 0px;
         margin-left: 24px;
     }
-    .first-column{
+
+    .first-column {
         margin-top: 40px;
     }
-    .school-logo > h3{
+
+    .school-logo>h3 {
         color: white;
         font-size: 1.9rem;
         padding-right: 200px;
     }
-    .first-column > p{
+
+    .first-column>p {
         font-size: 0.9rem;
         padding-right: 100px;
         margin-top: 20px;
     }
 
-    .secont-column{
+    .secont-column {
         margin: 25px 0px;
     }
-    .third-column{
+
+    .third-column {
         margin: 10px 0px;
     }
 }
